include_directories(${CALIB_INCLUDE_DIRS})

#find_package(OpenCV REQUIRED)
#find_package(X11 REQUIRED)

#add_library(calibration SHARED calibration.cpp calib_utils.cpp)
#target_link_libraries(calibration 
#    ${OpenCV_LIBS}
#    #X11::X11
#)
#target_include_directories(calibration PUBLIC ${CALIB_INCLUDE_DIRS})
